adding technologies to projects

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
                         <div class="col-sm-7">
                             <h1 class="display-4" id="greeting">Hi there!</h1>
                             <p class="lead">My name is <strong>Melinda Ivanov</strong>, nice to meet you.</p>
-                            <p>I am a technical-minded developer leveraging MSc degree in earth sciences from University
+                            <p class="lead" id="brand-statement">I am a technical-minded developer leveraging MSc degree in earth sciences from University
                                 of Szeged and earned
                                 full-stack web development certificate at University of Washington where I honed skills
-                                in JavaScript, React,
-                                Node.js and MySQL, MongoDB and gained special interest in server-side technologies. My
+                                in <strong>JavaScript, React,
+                                    Node.js and MySQL, MongoDB </strong> and gained special interest in server-side
+                                technologies. My
                                 experience includes taking
                                 responsibilities in design, technical, and development decisions in academic projects
                                 using newly developed skills.
