--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,10 @@
                                     <p class="card-text">This app allowes you to search for books and in the search
                                         page save them to the reading-list or view them on google. When the book has
                                         been read, it can be deleted from the reading-list.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, React, Node.js, HTML5, CSS3, Git, GitHub, MongoDB,
+                                        Heroku
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://cryptic-castle-46514.herokuapp.com/">Application</a></button>
@@ -55,6 +59,10 @@
                                         events, COVID-19 Statistics, the Silver and Gold price and a checklist
                                         allowing to verify the items needed to survive a disaster. When feeling to
                                         stressed look at puppies on the top to relax.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, React, Node.js, HTML5, CSS3, Git, GitHub, MySQL,
+                                        Heroku
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://vent-airquality-tracker.herokuapp.com/">Application</a></button>
@@ -72,6 +80,10 @@
                                         air quality in their area and to provide a platform where they are able to
                                         express their feelings alongside a short message to their local
                                         representative regarding the air quality.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, Node.js, HTML5, CSS3, Git, GitHub, MySQL, Heroku,
+                                        Handlebars, MVC, ORM
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://vent-airquality-tracker.herokuapp.com/">Application</a></button>
@@ -89,6 +101,9 @@
                                 <div class="card-body">
                                     <p class="card-text">Interactive website to help concerned citizens see where
                                         earthquakes are happening around the globe.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, HTML5, CSS3, Git, GitHub, APIs
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://jnsmelinda.github.io/Earthquake_Tracker">Application</a></button>
@@ -105,6 +120,10 @@
                                     <p class="card-text">This restaurant app lets the users input the names of
                                         burgers they'd like to eat. add a burger to the Ready to eat! section When
                                         you feel hungry simply Devour! it.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, Node.js, HTML5, CSS3, Git, GitHub, MySQL, Heroku,
+                                        Handlebars, MVC, ORM, Docker
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://lit-mesa-27296.herokuapp.com/index">Application</a></button>
@@ -123,6 +142,9 @@
                                         information about the manager and the team members. After completing the
                                         registry an HTML file is generated with the information provided by the
                                         user.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, Node.js, HTML5, CSS3, Git, GitHub
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://www.youtube.com/watch?v=nw7_on4DQ5Y">Application</a></button>
@@ -141,6 +163,9 @@
                                     <p class="card-text">Weather dashboard to allow the user to search for
                                         location and the
                                         app displays the current weather and 5 days forecast on the screen.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, JQuery, HTML5, CSS3, Git, GitHub, APIs
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://jnsmelinda.github.io/Weather-Dashboard/">Application</a></button>
@@ -157,6 +182,9 @@
                                     <p class="card-text">This calendar application allows the user to save events
                                         for each business hour of the day. When clicking into a timeblock the user
                                         can enter an event.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, JQuery, HTML5, CSS3, Git, GitHub
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://jnsmelinda.github.io/Work-Day-Scheduler/">Application</a></button>
@@ -166,23 +194,24 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Code-Quiz">
-                                <div class="card">
-                                    <h1>Code-quiz</h1>
-                                    <img class="card-img-top" src="assets/images/start.png" alt="Code-Quiz">
-                                    <div class="card-body">
-                                        <p class="card-text">This application prepares you for JavaScript interviews.
-                                            You have 2 minutes to answer 10 questions. Every wrong answear costs 10
-                                            seconds. When all questions are answered or the timer reaches 0 the game is
-                                            over, your score is presented and you can save your name and score.
-                                        </p>
-                                        <button type="button" class="btn btn-light"><a
-                                                href="https://jnsmelinda.github.io/Code-Quiz">Application</a></button>
-                                        <button type="button" class="btn btn-light"><a
-                                                href="https://github.com/jnsmelinda/Code-Quiz">Repository</a></button>
-                                    </div>
+                            <div class="card">
+                                <h1>Code-quiz</h1>
+                                <img class="card-img-top" src="assets/images/start.png" alt="Code-Quiz">
+                                <div class="card-body">
+                                    <p class="card-text">This application prepares you for JavaScript interviews.
+                                        You have 2 minutes to answer 10 questions. Every wrong answear costs 10
+                                        seconds. When all questions are answered or the timer reaches 0 the game is
+                                        over, your score is presented and you can save your name and score.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, JQuery, HTML5, CSS3, Git, GitHub
+                                    </p>
+                                    <button type="button" class="btn btn-light"><a
+                                            href="https://jnsmelinda.github.io/Code-Quiz">Application</a></button>
+                                    <button type="button" class="btn btn-light"><a
+                                            href="https://github.com/jnsmelinda/Code-Quiz">Repository</a></button>
                                 </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -196,6 +225,9 @@
                                         case,
                                         numerical, special characters), then displays the generated password on the
                                         screen.
+                                        <br>
+                                        <br>
+                                        Technologies: JavaScript, JQuery, HTML5, CSS3, Git, GitHub
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://jnsmelinda.github.io/Password-generator/">Application</a></button>
@@ -239,7 +271,11 @@
                                 <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
                                 <div class="card-body">
                                     <p class="card-text">The application compresses and decompresses text files by
-                                        using Huffman Coding based on the frequency of the characters.</p>
+                                        using Huffman Coding based on the frequency of the characters.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, Huffmann-coding, Collections, Generics, Binary-tree
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">Repository</a></button>
                                 </div>
@@ -253,7 +289,11 @@
                                     <p class="card-text">Guitar simulator that allows the user to play on a guitar
                                         by using the keyboard of the computer ("keytar"). The application constructs
                                         notes on the chromatic scale and the client can play these notes by pressing
-                                        different keys on the keyboard.</p>
+                                        different keys on the keyboard.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, Computer simulation, Collections, Generics
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">Repository</a></button>
                                 </div>
@@ -268,7 +308,11 @@
                                         state of the game on-the-fly and it tries to trick the user. It starts the
                                         game with a set of words instead of one word and reduces the set to the
                                         words what are less likely to be discovered after each guess, until the
-                                        player looses or only one word is in the set.</p>
+                                        player looses or only one word is in the set.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">Repository</a></button>
                                 </div>
@@ -284,7 +328,11 @@
                                     <p class="card-text">Game/simulation with animals in it like a
                                         jungle. Each species move and behave in different ways in the 2D
                                         environment. They meet, feed, move, sleep and kill each other until only one
-                                        kind of animal will rule the jungle.</p>
+                                        kind of animal will rule the jungle.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, Computer simulation
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src">Repository</a></button>
                                 </div>
@@ -297,7 +345,11 @@
                                 <div class="card-body">
                                     <p class="card-text">The application creates anagrams using recursive
                                         backtracking over dictionary to find all combinations of words that have the
-                                        same letters as a given phrase.</p>
+                                        same letters as a given phrase.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, Recursive backtracking
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">Repository</a></button>
                                 </div>
@@ -311,7 +363,11 @@
                                     <p class="card-text">Yes-no question game in which the player thinks
                                         of an object and the computer tries to guess it by asking yes-no questions.
                                         The computer becomes smarter after each failed round and learns the new
-                                        question-answer pair to win more future games.</p>
+                                        question-answer pair to win more future games.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, "AI", Binary-tree
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">Repository</a></button>
                                 </div>
@@ -327,7 +383,11 @@
                                     <p class="card-text">This DNA analyzing application that reads data from
                                         the National Center for Biotechnology Information and provides statistics
                                         about nucleotides and predicts whether or not the sequence is a
-                                        protein-coding gene.</p>
+                                        protein-coding gene.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Strings, DNA sequencing
+                                    </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">Repository</a></button>
                                 </div>
@@ -341,7 +401,10 @@
                                 <div class="card-body">
                                     <p class="card-text">This program reads an input file with a grammar in
                                         Backus-Naur Form (BNF) and allows the user to randomly generate elements of
-                                        the grammar. - Java, OOP, Collections API, Recursion, regex, Generics</p>
+                                        the grammar.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, Collections API, Recursion, Regular Expressions, Generics</p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/GrammarSolver">Repository</a></button>
                                 </div>
@@ -356,6 +419,9 @@
                                     <p class="card-text">Assassin manager keeps track of who is stalking whom and
                                         the history of who killed whom. This Java program starts with a circular
                                         chain of assassination targets what is linked list, called the “kill ring”.
+                                        <br>
+                                        <br>
+                                        Technologies: Java, Object Oriented Programming, Collections API, Linked Lists</p>
                                     </p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">Repository</a></button>
