styling fonts and adding contact to contactpage

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,16 @@
                         <div class='col-sm-6'>
                             <h1 class="display-4" id="greeting">Let's connect!</h1>
                             <div class="row">
-                                <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedin" class="fa fa-linkedin fa-5x" data-toggle="tooltip" data-placement="right" title="Linkedin"></a>
-                                <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" data-toggle="tooltip" data-placement="right" title="GitHub" id="github"></a>
+                                <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedinContact" class="fa fa-linkedin fa-3x" data-toggle="tooltip" data-placement="right" title="Linkedin"></a>
+                                <a href="https://github.com/jnsmelinda" class="fa fa-github fa-3x" data-toggle="tooltip" data-placement="right" title="GitHub" id="github"></a>
+                            </div>
+                            <div class="row" id="phoneRow">
+                                <div class="fa fas fa-phone fa-1x" id="emailPhoneContact"></div>
+                                <p id="contactInfo">425-614-5541</p>
+                            </div>
+                            <div class="row">
+                                <div class="fa fas fa-envelope" id="emailPhoneContact"></div>
+                                <p id="contactInfo">jns.melinda@gmail.com</p>
                             </div>
                         </div>
                         <div class='col-sm-6'>
