--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 of Szeged and earned
                                 full-stack web development certificate at University of Washington where I honed skills
                                 in <strong>JavaScript, React,
-                                    Node.js and MySQL, MongoDB </strong> and gained special interest in server-side
+                                    Node.js</strong> and <strong>MySQL, MongoDB </strong> and gained special interest in server-side
                                 technologies. My
                                 experience includes taking
                                 responsibilities in design, technical, and development decisions in academic projects
