--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                                 <h1>Google Book Search</h1>
                                 <img class="card-img-top" src="assets/images/googlebooks.png" alt="Vent">
                                 <div class="card-body">
-                                    <p class="card-text">This app allowes you to search for books and in the search
+                                    <p class="card-text" id="projectText">This app allowes you to search for books and in the search
                                         page save them to the reading-list or view them on google. When the book has
                                         been read, it can be deleted from the reading-list.
                                         <br>
@@ -55,7 +55,7 @@
                                 <h1>Disaster Dashboard</h1>
                                 <img class="card-img-top" src="assets/images/disaster.png" alt="Vent">
                                 <div class="card-body">
-                                    <p class="card-text">This app is built to collect recent disasters, near earth
+                                    <p class="card-text lead" id="projectText">This app is built to collect recent disasters, near earth
                                         events, COVID-19 Statistics, the Silver and Gold price and a checklist
                                         allowing to verify the items needed to survive a disaster. When feeling to
                                         stressed look at puppies on the top to relax.
@@ -76,7 +76,7 @@
                                 <h1>VENT</h1>
                                 <img class="card-img-top" src="assets/images/vent.PNG" alt="Vent">
                                 <div class="card-body">
-                                    <p class="card-text">Interactive website to help concerned citizens to see the
+                                    <p class="card-text lead" id="projectText">Interactive website to help concerned citizens to see the
                                         air quality in their area and to provide a platform where they are able to
                                         express their feelings alongside a short message to their local
                                         representative regarding the air quality.
@@ -99,7 +99,7 @@
                                 <h1>EarthQuake Tracker</h1>
                                 <img class="card-img-top" src="assets/images/earthquake.jpg" alt="earthquake">
                                 <div class="card-body">
-                                    <p class="card-text">Interactive website to help concerned citizens see where
+                                    <p class="card-text lead" id="projectText">Interactive website to help concerned citizens see where
                                         earthquakes are happening around the globe.
                                         <br>
                                         <br>
@@ -117,7 +117,7 @@
                                 <h1>Eat-Da-Burger</h1>
                                 <img class="card-img-top" src="assets/images/burger-demo.png" alt="Eat-Da-Burger">
                                 <div class="card-body">
-                                    <p class="card-text">This restaurant app lets the users input the names of
+                                    <p class="card-text lead" id="projectText">This restaurant app lets the users input the names of
                                         burgers they'd like to eat. add a burger to the Ready to eat! section When
                                         you feel hungry simply Devour! it.
                                         <br>
@@ -138,7 +138,7 @@
                                 <img class="card-img-top" id="employee-registry"
                                     src="assets/images/employee-registry.png" alt="employee-registry">
                                 <div class="card-body">
-                                    <p class="card-text">This command line application prompts the user for
+                                    <p class="card-text lead" id="projectText">This command line application prompts the user for
                                         information about the manager and the team members. After completing the
                                         registry an HTML file is generated with the information provided by the
                                         user.
@@ -160,7 +160,7 @@
                                 <h1>Weather Dashboard</h1>
                                 <img class="card-img-top" src="assets/images/weather.png" alt="Weather-Dashboard">
                                 <div class="card-body">
-                                    <p class="card-text">Weather dashboard to allow the user to search for
+                                    <p class="card-text lead" id="projectText">Weather dashboard to allow the user to search for
                                         location and the
                                         app displays the current weather and 5 days forecast on the screen.
                                         <br>
@@ -179,7 +179,7 @@
                                 <h1>Work Day Scheduler</h1>
                                 <img class="card-img-top" src="assets/images/scheduler.png" alt="Work-Day-Scheduler">
                                 <div class="card-body">
-                                    <p class="card-text">This calendar application allows the user to save events
+                                    <p class="card-text lead" id="projectText">This calendar application allows the user to save events
                                         for each business hour of the day. When clicking into a timeblock the user
                                         can enter an event.
                                         <br>
@@ -198,7 +198,7 @@
                                 <h1>Code-quiz</h1>
                                 <img class="card-img-top" src="assets/images/start.png" alt="Code-Quiz">
                                 <div class="card-body">
-                                    <p class="card-text">This application prepares you for JavaScript interviews.
+                                    <p class="card-text lead" id="projectText">This application prepares you for JavaScript interviews.
                                         You have 2 minutes to answer 10 questions. Every wrong answear costs 10
                                         seconds. When all questions are answered or the timer reaches 0 the game is
                                         over, your score is presented and you can save your name and score.
@@ -220,7 +220,7 @@
                                 <h1>Password Generator</h1>
                                 <img class="card-img-top" src="assets/images/password.png" alt="Password-generator">
                                 <div class="card-body">
-                                    <p class="card-text">The random password generator promts the user for the
+                                    <p class="card-text lead" id="projectText">The random password generator promts the user for the
                                         password length (8-128) and the strength of the password (lower case, upper
                                         case,
                                         numerical, special characters), then displays the generated password on the
@@ -241,7 +241,7 @@
                                 <h1>Conference registry</h1>
                                 <img class="card-img-top" src="assets/images/conference.jpg" alt="conference">
                                 <div class="card-body">
-                                    <p class="card-text">Applicant registry webservice using Spring Boot, Spring
+                                    <p class="card-text lead" id="projectText">Applicant registry webservice using Spring Boot, Spring
                                         MVC,
                                         JSP or Thymeleaf and HTML.</p>
                                     <button type="button" class="btn btn-light"><a
@@ -256,7 +256,7 @@
                                     src="assets/images/recipe-book-free-clipart-recipe-clip-art-300_300.jpg"
                                     alt="Recipe-book">
                                 <div class="card-body">
-                                    <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring
+                                    <p class="card-text lead" id="projectText">REST based CRUDS webservice using Spring Data REST (Spring
                                         Boot, Spring MVC, Spring Data, JPA).</p>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/Recipe-book">Repository</a></button>
@@ -270,7 +270,7 @@
                                 <h1>Huffmann coding</h1>
                                 <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
                                 <div class="card-body">
-                                    <p class="card-text">The application compresses and decompresses text files by
+                                    <p class="card-text lead" id="projectText">The application compresses and decompresses text files by
                                         using Huffman Coding based on the frequency of the characters.
                                         <br>
                                         <br>
@@ -286,7 +286,7 @@
                                 <h1>Guitar Hero</h1>
                                 <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero">
                                 <div class="card-body">
-                                    <p class="card-text">Guitar simulator that allows the user to play on a guitar
+                                    <p class="card-text lead" id="projectText">Guitar simulator that allows the user to play on a guitar
                                         by using the keyboard of the computer ("keytar"). The application constructs
                                         notes on the chromatic scale and the client can play these notes by pressing
                                         different keys on the keyboard.
@@ -304,7 +304,7 @@
                                 <h1>Hangman</h1>
                                 <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
                                 <div class="card-body">
-                                    <p class="card-text">Evil hangman application which manages and modifies the
+                                    <p class="card-text lead" id="projectText">Evil hangman application which manages and modifies the
                                         state of the game on-the-fly and it tries to trick the user. It starts the
                                         game with a set of words instead of one word and reduces the set to the
                                         words what are less likely to be discovered after each guess, until the
@@ -325,7 +325,7 @@
                                 <h1>Jungle game</h1>
                                 <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame">
                                 <div class="card-body">
-                                    <p class="card-text">Game/simulation with animals in it like a
+                                    <p class="card-text lead" id="projectText">Game/simulation with animals in it like a
                                         jungle. Each species move and behave in different ways in the 2D
                                         environment. They meet, feed, move, sleep and kill each other until only one
                                         kind of animal will rule the jungle.
@@ -343,7 +343,7 @@
                                 <h1>Anagram solver</h1>
                                 <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram">
                                 <div class="card-body">
-                                    <p class="card-text">The application creates anagrams using recursive
+                                    <p class="card-text lead" id="projectText">The application creates anagrams using recursive
                                         backtracking over dictionary to find all combinations of words that have the
                                         same letters as a given phrase.
                                         <br>
@@ -360,7 +360,7 @@
                                 <h1>20 Questions</h1>
                                 <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions">
                                 <div class="card-body">
-                                    <p class="card-text">Yes-no question game in which the player thinks
+                                    <p class="card-text lead" id="projectText">Yes-no question game in which the player thinks
                                         of an object and the computer tries to guess it by asking yes-no questions.
                                         The computer becomes smarter after each failed round and learns the new
                                         question-answer pair to win more future games.
@@ -380,7 +380,7 @@
                                 <h1>DNA Analyzer</h1>
                                 <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
                                 <div class="card-body">
-                                    <p class="card-text">This DNA analyzing application that reads data from
+                                    <p class="card-text lead lead">This DNA analyzing application that reads data from
                                         the National Center for Biotechnology Information and provides statistics
                                         about nucleotides and predicts whether or not the sequence is a
                                         protein-coding gene.
@@ -399,7 +399,7 @@
                                 <img class="card-img-top" src="assets/images/the-big-dog-hit-the-big-dog.png"
                                     alt="Grammar">
                                 <div class="card-body">
-                                    <p class="card-text">This program reads an input file with a grammar in
+                                    <p class="card-text lead" id="projectText">This program reads an input file with a grammar in
                                         Backus-Naur Form (BNF) and allows the user to randomly generate elements of
                                         the grammar.
                                         <br>
@@ -416,7 +416,7 @@
                                 <img class="card-img-top" src="assets/images/LinkedList-in-Java.png"
                                     alt="assassination">
                                 <div class="card-body">
-                                    <p class="card-text">Assassin manager keeps track of who is stalking whom and
+                                    <p class="card-text lead" id="projectText">Assassin manager keeps track of who is stalking whom and
                                         the history of who killed whom. This Java program starts with a circular
                                         chain of assassination targets what is linked list, called the “kill ring”.
                                         <br>
