--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                                         Heroku
                                     </p>
                                     <button type="button" class="btn btn-light"><a
-                                            href="https://cryptic-castle-46514.herokuapp.com/">Application</a></button>
+                                            href="https://protected-island-24963.herokuapp.com/#/">Application</a></button>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/Google-Book-Search">Repository</a></button>
                                 </div>
@@ -65,7 +65,7 @@
                                         Heroku
                                     </p>
                                     <button type="button" class="btn btn-light"><a
-                                            href="https://vent-airquality-tracker.herokuapp.com/">Application</a></button>
+                                            href="https://cryptic-castle-46514.herokuapp.com/">Application</a></button>
                                     <button type="button" class="btn btn-light"><a
                                             href="https://github.com/jnsmelinda/Disaster_Dashboard">Repository</a></button>
                                 </div>
